# III-Cpp-project

./: .gitignore  Game.cryproject  system.cfg
Code/: CMakeLists.txt  Codemap.dgml  GamePlugin.cpp  GamePlugin.h  StdAfx.h
Code/Components/AI/: AIComponent.cpp  AIComponent.h  AIEnemy.cpp  AIEnemy.h  BehaviorTree.h
Code/Components/AI/Nodes/: TestNode.cpp  TestNode.h
Code/Components/Actor/: Actor.cpp  Actor.h  ActorController.cpp  ActorController.h  IActor.cpp  IActor.h
Code/Components/Actor/Actions/: IAction.cpp  IAction.h
Code/Components/Actor/State/: IActorState.h
Code/Components/Attributes/: Attributes.h
Code/Components/Inventory/: Inventory.cpp  Inventory.h
Code/Components/Item/: Item.cpp  Item.h  ItemProperties.h
Code/Components/Player/: Player.cpp  Player.h
Code/Components/Player/Camera/: CameraManager.cpp  CameraManager.h  ICameraMode.h  InventoryCameraMode.h  TopdownCameraMode.h
Code/Console/: CVars.cpp  CVars.h
Code/Utils/: DebugRenderer.h  Logger.h  MovingAverage.h  StringConversions.h
Editor/ResourceCache/animations/motusanims/rifleanims/: walkstraferifleaim_lft_3p.caf.cryasset
Editor/ResourceCache/animations/motusanims/strafe/: jogcross_bck_lft_3p.caf.cryasset
